[gd_scene load_steps=5 format=3 uid="uid://66p3duiumuwj"]

[ext_resource type="Script" uid="uid://ch6cd2auwvnt2" path="res://scenes/3d/sztransition/secret_zone_transition.gd" id="1_k2a5r"]
[ext_resource type="AudioStream" uid="uid://bsu44l1s2efv2" path="res://sounds/single-key-press-393908.mp3" id="2_ym61u"]

[sub_resource type="Shader" id="Shader_ym61u"]
code = "shader_type canvas_item;
uniform sampler2D existing_screen_texture: hint_screen_texture, filter_linear_mipmap;

void fragment() {
	vec3 new_color = texture(existing_screen_texture, SCREEN_UV, 0.0).rgb;
	new_color = vec3(1.0) - new_color;
	COLOR.rgb = new_color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g8tow"]
shader = SubResource("Shader_ym61u")

[node name="SecretZoneTransition" type="CanvasLayer" node_paths=PackedStringArray("label_containers", "purified_containers")]
layer = 16
script = ExtResource("1_k2a5r")
label_containers = [NodePath("FadingScreen/LabelContainer"), NodePath("FadingScreen/LabelContainer2"), NodePath("FadingScreen/LabelContainer3"), NodePath("FadingScreen/LabelContainer4"), NodePath("FadingScreen/LabelContainer5"), NodePath("FadingScreen/LabelContainer6")]
purified_containers = [NodePath("FadingScreen/PurifiedLabels/LabelPurified"), NodePath("FadingScreen/PurifiedLabels/LabelPurified2"), NodePath("FadingScreen/PurifiedLabels/LabelPurified4")]

[node name="FadingScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Invert" type="ColorRect" parent="FadingScreen"]
unique_name_in_owner = true
visible = false
z_index = 10
material = SubResource("ShaderMaterial_g8tow")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dark" type="ColorRect" parent="FadingScreen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PurifiedLabels" type="Control" parent="FadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelPurified" type="VBoxContainer" parent="FadingScreen/PurifiedLabels"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="IntroLabel1" type="Label" parent="FadingScreen/PurifiedLabels/LabelPurified"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelPurified2" type="VBoxContainer" parent="FadingScreen/PurifiedLabels"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="IntroLabel1" type="Label" parent="FadingScreen/PurifiedLabels/LabelPurified2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Connection re-established."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelPurified4" type="VBoxContainer" parent="FadingScreen/PurifiedLabels"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="IntroLabel1" type="Label" parent="FadingScreen/PurifiedLabels/LabelPurified4"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Welcome back."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelContainer" type="VBoxContainer" parent="FadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="IntroLabel1" type="Label" parent="FadingScreen/LabelContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntroLabel2" type="Label" parent="FadingScreen/LabelContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Connection interrupted."
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntroLabel3" type="Label" parent="FadingScreen/LabelContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Attempting to reconnect."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelContainer2" type="VBoxContainer" parent="FadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="IntroLabel2" type="Label" parent="FadingScreen/LabelContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntroLabel3" type="Label" parent="FadingScreen/LabelContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntroLabel4" type="Label" parent="FadingScreen/LabelContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelContainer3" type="VBoxContainer" parent="FadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="IntroLabel3" type="Label" parent="FadingScreen/LabelContainer3"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Connection failed."
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntroLabel4" type="Label" parent="FadingScreen/LabelContainer3"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Reattempting."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelContainer4" type="VBoxContainer" parent="FadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="IntroLabel4" type="Label" parent="FadingScreen/LabelContainer4"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelContainer5" type="VBoxContainer" parent="FadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="IntroLabel5" type="Label" parent="FadingScreen/LabelContainer5"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Failed to connect."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelContainer6" type="VBoxContainer" parent="FadingScreen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="IntroLabel6" type="Label" parent="FadingScreen/LabelContainer6"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Aborting user."
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyPress" type="AudioStreamPlayer" parent="FadingScreen"]
unique_name_in_owner = true
stream = ExtResource("2_ym61u")
volume_db = -30.0
